# python-iso18245

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linting.yml  pull_request.yml
iso18245/: __init__.py
iso18245/data/: alipay_list.csv  amex_list.csv  iso18245_official_list.csv  iso18245_ranges.csv  mastercard_list.csv  private_ranges.csv  stripe_list.csv  usda_list.csv  visa_list.csv
scripts/: clean_visa.py  get_alipay.py
