[tool.poetry]
name = "iso18245"
version = "1.2.0"
description = "The ISO 18245 Merchant Category Codes database"
authors = ["Jerome Leclanche <jerome@leclan.ch>"]
readme = "README.md"
repository = "https://github.com/jleclanche/python-iso18245"
license = "MIT"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Topic :: Office/Business :: Financial",
	"Topic :: Office/Business :: Financial :: Accounting",
	"Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pre-commit = "^3.2.2"
types-setuptools = "^68.0.0.3"

[build-system]
requires = ["poetry_core>=1.5.0"]
build-backend = "poetry.masonry.api"

[tool.black]
use-tabs = true

[tool.mypy]
strict = true
warn_unused_configs = true
