[metadata]
name = iso18245
version = 1.0.0
description = The ISO 18245 Merchant Category Codes database
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jleclanche/python-iso18245/
download_url = https://github.com/jleclanche/python-iso18245/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Games/Entertainment

[options]
packages = iso18245
include_package_data = True
zip_safe = True

[bdist_wheel]
universal = 1
